TEST_PROGRAMS/INVALID/09/newline_string.go
package main

"newline
in string"
